# Agent-Policy-Gateway

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.md  SECURITY.md  deploy.ps1  dev.ps1  docker-compose.yml  policy.json  policy.test.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: compliance-mapping.md  threat-model.md
docs/adr/: 001-modular-monolith.md  002-deterministic-policy-scope.md
frontend/: .env.example  README.md  package-lock.json  package.json  tailwind.config.ts
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/dashboard/audit/: page.tsx
frontend/src/app/dashboard/demos/: page.tsx
frontend/src/app/dashboard/live-demo/: page.tsx
frontend/src/app/dashboard/policy/: page.tsx
frontend/src/app/dashboard/request-flow/: page.tsx
frontend/src/components/: sidebar.tsx
frontend/src/lib/: api.ts  auth.ts
k8s/: README.md  auth-deployment.yaml  backend-deployment.yaml  frontend-deployment.yaml  gateway-deployment.yaml  ingress.yaml  namespace.yaml  redis.yaml  secrets.yaml
services/agent/: Dockerfile
services/auth/: Dockerfile
services/backend/: Dockerfile
services/frontend/: Dockerfile
services/gateway/: Dockerfile
services/postgres/: init.sql
src/agent_policy_gateway/: __init__.py  audit.py  cli.py  demo.py  main.py  models.py  policy.py  prototype.py  proxy_app.py  session.py  sts_broker.py
src/agent_policy_gateway/adapters/: __init__.py
src/agent_policy_gateway/adapters/audit/: __init__.py  cef.py  jsonl.py  splunk_hec.py  sqlite.py  stdout.py  syslog.py
src/agent_policy_gateway/adapters/brokers/: __init__.py  aws_sts.py  null_broker.py
src/agent_policy_gateway/adapters/executors/: __init__.py  http_jsonrpc.py
src/agent_policy_gateway/adapters/identity/: __init__.py  providers.py  shared_token.py
src/agent_policy_gateway/adapters/observability/: __init__.py  otel.py
src/agent_policy_gateway/adapters/state/: __init__.py  redis_store.py
src/agent_policy_gateway/adapters/transports/: __init__.py  stdio.py
src/agent_policy_gateway/auth_service/: __init__.py  oidc.py  provider.py  router.py  tokens.py
src/agent_policy_gateway/core/: __init__.py  audit.py  audit_sink.py  egress.py  enforcement.py  filter.py  identity.py  learning.py  mode.py  models.py  pipeline.py  policy.py  policy_test.py  schemas.py  session.py  sql.py
src/agent_policy_gateway/dashboard_api/: __init__.py  router.py
src/agent_policy_gateway/live_demo/: __init__.py  aws_sts_mock.py  database.py  demo_executor.py  llm_provider.py  router.py  scenarios.py
src/agent_policy_gateway/server/: __init__.py  app.py
src/agent_policy_gateway/services/: __init__.py  agent_app.py  auth_app.py  gateway_app.py
src/kirogate/: __init__.py  audit.py  auth.py  cli.py  demo.py  egress.py  filter.py  main.py  mode.py  models.py  policy.py  prototype.py  proxy_app.py  session.py  sts_broker.py
src/kirogate/auth_service/: __init__.py  provider.py  router.py  tokens.py
src/kirogate/dashboard_api/: __init__.py  router.py
src/kirogate/live_demo/: __init__.py  aws_sts_mock.py  database.py  llm_provider.py  router.py  scenarios.py
src/kirogate/services/: __init__.py  agent_app.py  auth_app.py  gateway_app.py
tests/: conftest.py  test_audit.py  test_audit_cli.py  test_audit_sink.py  test_auth.py  test_cli_init.py  test_egress.py  test_filter.py  test_fixtures.py  test_identity.py  test_learning.py  test_main.py  test_mode.py  test_models.py  test_observability.py  test_oidc.py  test_policy.py  test_policy_sql.py  test_policy_test.py  test_provider.py  test_redis_store.py  test_schemas.py  test_session.py  test_siem_sinks.py  test_sql.py  test_stdio_transport.py  test_sts_broker.py  test_tokens.py
tests/integration/: _stdio_echo_server.py  test_proxy_agents.py  test_proxy_e2e.py  test_wrap_e2e.py
