[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kirogate"
version = "0.1.0"
description = "Zero Trust Policy Gateway for AI Agents"
requires-python = ">=3.11"
license = {text = "MIT"}
readme = "README.md"
keywords = ["ai", "agents", "security", "zero-trust", "mcp", "policy", "gateway"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
dependencies = [
    "fastapi==0.115.12",
    "pydantic==2.11.3",
    "uvicorn==0.34.3",
    "boto3==1.39.2",
    "httpx==0.28.1",
    "structlog==25.4.0",
    "python-dotenv==1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "hypothesis==6.155.3",
    "pytest-asyncio==0.26.0",
]

# Note: For AWS STS integration testing, install localstack separately:
#   pip install localstack  (requires Windows Long Path support enabled)
# Alternative: Use localstack Docker container directly for integration tests.

[tool.hatch.build.targets.wheel]
packages = ["src/kirogate"]

[project.scripts]
kirogate = "kirogate.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
