[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-policy-gateway"
version = "0.1.0"
description = "Zero Trust Policy Gateway for AI Agents"
requires-python = ">=3.11"
license = {text = "MIT"}
readme = "README.md"
keywords = ["ai", "agents", "security", "zero-trust", "mcp", "policy", "gateway"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
dependencies = [
    "fastapi>=0.115,<1",
    "pydantic>=2.11,<3",
    "uvicorn>=0.34,<1",
    "boto3>=1.39,<2",
    "httpx>=0.28,<1",
    "structlog>=25.4,<26",
    "python-dotenv>=1.1,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "hypothesis>=6.155,<7",
    "pytest-asyncio>=0.26,<1",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_policy_gateway"]

[project.scripts]
apg = "agent_policy_gateway.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
packages = ["agent_policy_gateway"]
mypy_path = "src"
ignore_missing_imports = true
# Start lenient; tighten module-by-module as the core stabilizes
check_untyped_defs = true
