[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-policy-gateway"
version = "0.1.0"
description = "Deterministic, policy-as-code firewall for AI agent tool calls (MCP)"
requires-python = ">=3.11"
license = {text = "MIT"}
readme = "README.md"
authors = [{ name = "Nikhil Kudache", email = "nikhilkudache1@gmail.com" }]
keywords = ["ai", "agents", "security", "zero-trust", "mcp", "policy", "gateway"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.115,<1",
    "pydantic>=2.11,<3",
    "uvicorn>=0.34,<1",
    "httpx>=0.28,<1",
    "structlog>=25.4,<26",
    "python-dotenv>=1.1,<2",
    "pyyaml>=6.0,<7",
    "sqlglot>=25,<28",
]

[project.optional-dependencies]
# AWS STS credential broker — opt-in; the CLI happy path needs none of this.
aws = ["boto3>=1.39,<2"]
# Redis-backed session/quota store for multi-replica deployments.
redis = ["redis>=5,<7"]
# Dashboard/operator auth (server path only, not the CLI): JWT (+ RS256 for
# OIDC) and argon2.
server = ["pyjwt[crypto]>=2.8,<3", "argon2-cffi>=23,<25"]
# OpenTelemetry traces + metrics (opt-in via APG_OTEL_ENABLED).
otel = [
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-http>=1.20",
]
dev = [
    "pytest>=8.3,<9",
    "hypothesis>=6.155,<7",
    "pytest-asyncio>=0.26,<1",
    "ruff>=0.5",
    "mypy>=1.10",
    "boto3>=1.39,<2",
    "redis>=5,<7",
    "fakeredis>=2.20,<3",
    "pyjwt[crypto]>=2.8,<3",
    "argon2-cffi>=23,<25",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-http>=1.20",
]

[project.urls]
Homepage = "https://github.com/nknick99/Agent-Policy-Gateway"
Repository = "https://github.com/nknick99/Agent-Policy-Gateway"
Issues = "https://github.com/nknick99/Agent-Policy-Gateway/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_policy_gateway"]

[tool.hatch.build.targets.sdist]
# Keep the source distribution to what builds and runs the package — the
# Next.js frontend, k8s manifests, and PowerShell scripts don't belong in it.
include = [
    "src/agent_policy_gateway",
    "/README.md",
    "/LICENSE",
    "/policy.json",
    "/policy.test.yaml",
    "/pyproject.toml",
]

[project.scripts]
apg = "agent_policy_gateway.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
packages = ["agent_policy_gateway"]
mypy_path = "src"
ignore_missing_imports = true
# Start lenient; tighten module-by-module as the core stabilizes
check_untyped_defs = true
